Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Imagine there's no Heaven</title>
+    <title>Imagine there's no heaven</title>
     <script>
-        setTimeout("location.href = 'http://itseasyifyoutry.us';",1500);
+        setTimeout("location.href = 'http://itseasyifyoutry.us';", 1500);
+
+        function breakout_of_frame() {
+            // see https://www.thesitewizard.com/archive/framebreak.shtml
+            // for an explanation of this script and how to use it on your
+            // own website
+            if (top.location != location) {
+                top.location.href = document.location.href;
+            }
+        }
     </script>
 </head>
 <body>
