Add break out of frames script

--- a/itseasyifyoutry/index.html
+++ b/itseasyifyoutry/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>It's easy if you try</title>
     <script>
-        setTimeout("location.href = 'http://nohellbelow.us';",1500);
-    </script>
+    setTimeout("location.href = 'http://nohellbelow.us';",1500);
+    function breakout_of_frame() {
+        // see https://www.thesitewizard.com/archive/framebreak.shtml
+        // for an explanation of this script and how to use it on your
+        // own website
+        if (top.location != location) {
+            top.location.href = document.location.href;
+        }
+    }
+</script>
 </head>
 <body>
 
