Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -13,6 +13,7 @@
             }
         }
         setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
+        breakout_of_frame();
     </script>
 </head>
 <body>
