Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -12,10 +12,8 @@
                 top.location.href = document.location.href;
             }
         }
-        breakout_of_frame();
-        setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
     </script>
 </head>
-<body>
+<body onload="setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);breakout_of_frame()">
 </body>
 </html>
