Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -12,8 +12,9 @@
                 top.location.href = document.location.href;
             }
         }
+        setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
     </script>
 </head>
-<body onload="setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);breakout_of_frame()">
+<body onload="breakout_of_frame()">
 </body>
 </html>
