Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -12,7 +12,7 @@
                 top.location.href = document.location.href;
             }
         }
-        setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
+        //setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
     </script>
 </head>
 <body onload="breakout_of_frame()">
