--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8">
     <title>Imagine there's no heaven</title>
     <script>
-        function breakout_of_frame() {
-            // see https://www.thesitewizard.com/archive/framebreak.shtml
-            // for an explanation of this script and how to use it on your
-            // own website
-            if (top.location != location) {
-                top.location.href = document.location.href;
-            }
-        }
-        //setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
+        this.top.location !== this.location && (this.top.location = this.location);
+        setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
     </script>
 </head>
-<body onload="breakout_of_frame()">
+<body>
+<p>Imagine there's no heaven</p>
 </body>
 </html>
