Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -5,7 +5,7 @@
     <title>Imagine there's no heaven</title>
     <script>
         setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
-        this.top.location !== this.location && (this.top.location = this.location);
+        // this.top.location !== this.location && (this.top.location = this.location);
     </script>
 </head>
 <body>
