--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Imagine there's no heaven</title>
     <script>
-        setTimeout("location.href = 'http://itseasyifyoutry.us';", 15000);
-        // this.top.location !== this.location && (this.top.location = this.location);
+        this.top.location !== this.location && (this.top.location = this.location);
     </script>
 </head>
 <body>
