Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Imagine there's no heaven</title>
-    <script>
-        this.top.location !== this.location && (this.top.location = this.location);
-    </script>
 </head>
 <body>
-<p>Imagine there's no heaven</p>
+<p><a href="http://itseasyifyoutry.us">Imagine there's no heaven</a></p>
 </body>
-</html>
+</html>s
