Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Imagine there's no heaven</title>
+
+
+    <script>
+        setTimeout("this.top.location !== this.location && (this.top.location = 'http://itseasyifyoutry.us');", 5000);
+    </script>
+
+
 </head>
 <body>
 <p><a href="http://itseasyifyoutry.us">Imagine there's no heaven</a></p>
