Add break out of frames script

--- a/nohellbelowus/index.html
+++ b/nohellbelowus/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>No hell below us</title>
     <script>
-        setTimeout("location.href = 'http://aboveusonlysky.us';",15000);
+        setTimeout("this.top.location !== this.location && (this.top.location = 'http://aboveusonlysky.us');", 5000);
     </script>
 </head>
 <body>
