--- a/itseasyifyoutry/index.html
+++ b/itseasyifyoutry/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8">
     <title>It's easy if you try</title>
     <script>
-        function breakout_of_frame() {
-            // see https://www.thesitewizard.com/archive/framebreak.shtml
-            // for an explanation of this script and how to use it on your
-            // own website
-            if (top.location != location) {
-                top.location.href = document.location.href;
-            }
-        }
-    setTimeout("location.href = 'http://nohellbelow.us';",15000);
+        setTimeout("this.top.location !== this.location && (this.top.location = 'http://nohellbelow.us');", 5000);
+
 </script>
 </head>
 <body>
