Add break out of frames script

--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body>
-<p><a href="http://itseasyifyoutry.us">Imagine there's no heaven</a></p>
+<body bgcolor="#ff0000">
+<a href="http://itseasyifyoutry.us"><div class="page"></div></a>
 </body>
 </html>
