Add break out of frames script

--- a/itseasyifyoutry/index.html
+++ b/itseasyifyoutry/index.html
@@ -8,7 +8,7 @@
 
 </script>
 </head>
-<body>
-It's easy if you try
+<body bgcolor="#ff4400">
+<a href="http://nohellbelow.us"><div class="page"></div></a>
 </body>
 </html>
