Add break out of frames script

--- a/aboveusonlysky/index.html
+++ b/aboveusonlysky/index.html
@@ -6,8 +6,10 @@
     <script>
         setTimeout("this.top.location !== this.location && (this.top.location = 'http://imagineallthepeoplelivingfortoday.us');", 5000);
     </script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+
 </head>
-<body>
-Above us only sky
+<body bgcolor="#ff9900">
+<a href="http://imagineallthepeoplelivingfortoday.us"><div class="page"></div></a>
 </body>
 </html>
