--- a/imagineallthepeoplelivingfortoday/index.html
+++ b/imagineallthepeoplelivingfortoday/index.html
@@ -6,8 +6,10 @@
     <script>
         setTimeout("this.top.location !== this.location && (this.top.location = 'http://imaginetheresnocountries.us');", 5000);
     </script>
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="../style.css">
 
+</head>
+<body bgcolor="#ffaa00">
+<a href="http://imaginetheresnocountries.us"><div class="page"></div></a>
 </body>
 </html>
