--- a/imaginetheresnocountries/index.html
+++ b/imaginetheresnocountries/index.html
@@ -6,6 +6,8 @@
     <script>
         setTimeout("this.top.location !== this.location && (this.top.location = 'http://itisnthardtodo.us');", 5000);
     </script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+
 </head>
 <body>
 
