--- a/itisnthardtodo/index.html
+++ b/itisnthardtodo/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>No hell below us</title>
+    <title>It isn't hard to do</title>
     <script>
-        setTimeout("this.top.location !== this.location && (this.top.location = 'http://aboveusonlysky.us');", 5000);
+        setTimeout("this.top.location !== this.location && (this.top.location = 'http://nothingtokillordiefor.us');", 5000);
     </script>
     <link rel="stylesheet" type="text/css" href="../style.css">
 
 </head>
-<body bgcolor="#ff6600">
+<body>
+
 </body>
 </html>
