--- a/itseasyifyoutry/index.html
+++ b/itseasyifyoutry/index.html
@@ -7,8 +7,10 @@
         setTimeout("this.top.location !== this.location && (this.top.location = 'http://nohellbelow.us');", 5000);
 
 </script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+
 </head>
-<body bgcolor="#ff4400">
+<body bgcolor="#ff3300">
 <a href="http://nohellbelow.us"><div class="page"></div></a>
 </body>
 </html>
