--- a/imaginetheresnoheaven/index.html
+++ b/imaginetheresnoheaven/index.html
@@ -6,8 +6,10 @@
 
 
     <script>
-        setTimeout("this.top.location !== this.location && (this.top.location = 'http://itseasyifyoutry.us');", 5000);
-    </script>
+    setTimeout("this.top.location !== this.location && (this.top.location = 'http://itseasyifyoutry.us');", 5000);
+</script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
+
 
 
 </head>
