Add break out of frames script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Imagine</title>
 </head>
 <body>
-<a href="http://imaginetheresnoheaven.us" title="Imagine there's no Heaven">Imagine</a>
+
+<a href="http://imaginetheresnoheaven.us">
+    <div class="page"><a href="http://imaginetheresnoheaven.us" title="Imagine">Imagine</a>
+    </div>
+</a>
 </body>
 </html>
