Add break out of frames script

--- a/nothingtokillordiefor/index.html
+++ b/nothingtokillordiefor/index.html
@@ -8,7 +8,7 @@
     </script>
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
-<body>
+<body bgcolor="#ffee00">
 <a href="http://andnoreligiontoo.us"><div class="page"></div></a>
 </body>
 </html>
