Add break out of frames script

--- a/nothingtokillordiefor/index.html
+++ b/nothingtokillordiefor/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body bgcolor="#ffee00">
-<a href="http://andnoreligiontoo.us"><div class="page"></div></a>
+<div class="page" onclick="this.top.location !== this.location && (this.top.location = 'http://andnoreligiontoo.us');"></div>
 </body>
 </html>
