--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 </head>
 <body>
-
-<a href="http://imaginetheresnoheaven.us">
-    <div class="page"><a href="http://imaginetheresnoheaven.us" title="Imagine">Imagine</a>
+    <div class="page" onclick="this.top.location = 'http://imaginetheresnoheaven.us'"><a href="http://imaginetheresnoheaven.us" title="Imagine">Imagine</a>
     </div>
-</a>
 </body>
 </html>
