Add break out of frames script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <div class="page" onclick="this.top.location = 'http://imaginetheresnoheaven.us'"><a href="http://imaginetheresnoheaven.us" title="Imagine">Imagine</a>
+    <div class="page" onclick="window.location.href = 'http://imaginetheresnoheaven.us'"><a href="http://imaginetheresnoheaven.us" title="Imagine">Imagine</a>
     </div>
 </body>
 </html>
